# rdl_release

./: CONTRIBUTING.md  Doxyfile  LICENSE  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
cmake/Modules/: Format.cmake
debian/: changelog  control  gbp.conf  rules
doc/: Mainpage.h
include/rdl_benchmark/: Human36Model.h
include/rdl_dynamics/: Body.h  Contacts.h  Dynamics.h  FrameObject.hpp  RdlExceptions.hpp  SpatialAcceleration.hpp  SpatialForce.hpp  rdl_eigenmath.h
rdl/: CMakeLists.txt  package.xml
rdl_benchmark/: CMakeLists.txt  package.xml
rdl_benchmark/include/rdl_benchmark/: SampleData.h  model_generator.h
rdl_benchmark/src/: Human36Model.cc  benchmark.cc  model_generator.cc
rdl_cmake/: CMakeLists.txt  package.xml
rdl_cmake/cmake/Modules/: CodeCoverage.cmake  Lint.cmake
rdl_dynamics/: CMakeLists.txt  package.xml
rdl_dynamics/include/rdl_dynamics/: FrameExceptions.hpp  FrameOrientation.hpp  FramePoint.hpp  FrameVector.hpp  Joint.h  Kinematics.h  Model.h  Momentum.hpp  Point3.hpp  Quaternion.h  ReferenceFrame.hpp  ReferenceFrameHolder.hpp  RigidBodyInertia.hpp  SpatialAlgebraOperators.h  SpatialMomentum.hpp  SpatialMotion.hpp  SpatialRigidBodyInertia.hpp  TransformableGeometricObject.hpp  rdl_config.h  rdl_math.hpp  rdl_mathutils.h  rdl_utils.h
rdl_dynamics/src/: Contacts.cc  Dynamics.cc  FrameObject.cpp  Joint.cc  Kinematics.cc  Model.cc  ReferenceFrame.cpp  RigidBodyInertia.cpp  SpatialMotion.cpp  rdl_mathutils.cc  rdl_utils.cc
rdl_dynamics/tests/: ForceVectorTests.cpp  FrameOrientationTests.cpp  Human36Fixture.h  MathTests.cc  ModelFrameTests.cpp  MomentumTests.cpp  MotionVectorTests.cpp  Point3Test.cpp  QuaternionTests.cpp  RdlBodyTests.cpp  RdlCalcAccelerationTests.cpp  RdlCompositeRigidBodyTests.cpp  RdlContactsTests.cpp  RdlCustomJointSingleBodyTests.cpp  RdlCustomJointTests.cpp  RdlDynamicsTests.cpp  RdlFloatingBaseTests.cpp  RdlImpulsesTests.cpp  RdlInverseDynamicsTests.cpp  RdlKinematicsTests.cpp  RdlModelTests.cpp  RdlSparseFactorizationTests.cpp  RdlTwoLegModelTests.cpp  RdlUtilsTests.cpp  ReferenceFrameTest.cpp  RigidBodyInertiaTests.cpp  SpatialAccelerationTests.cpp  SpatialAlgebraTests.cc  SpatialForceTests.cpp  SpatialMomentumTests.cpp  SpatialMotionTests.cpp  SpatialRigidBodyInertiaTests.cpp  UnitTestUtils.hpp  UnitTestUtilsTests.cpp
rdl_urdfreader/: CMakeLists.txt  package.xml
rdl_urdfreader/config/: uncrustify.cfg
rdl_urdfreader/include/rdl_urdfreader/: urdfreader.h
rdl_urdfreader/src/: rdl_urdfreader_util.cc  urdfreader.cc
rdl_urdfreader/tests/: UrdfReaderTests.cpp
rdl_urdfreader/tests/urdf/: floating_base_robot.urdf  floating_joint_robot.urdf  single_body_floating_base.urdf  test_robot_arm.urdf  test_robot_arm_neg_jnt_axes.urdf
rpm/: ros-kinetic-rdl-urdfreader.spec  template.spec
src/: SpatialAcceleration.cpp  TransformableGeometricObject.cpp
tests/: Fixtures.h  FramePointTest.cpp  FrameVectorTest.cpp  JointTests.cpp  RdlCalcVelocitiesTests.cpp  RdlCustomJointMultiBodyTests.cpp  RdlKinematicsTests.cpp  RdlMultiDofTests.cpp  RdlUtilsTests.cpp
