<?xml version="1.0"?>
<package format="2">
    <name>rdl_urdfreader</name>
    <version>0.9.5</version>
    <description>The rdl_urdfreader package</description>

    <maintainer email="jlack1987@gmail.com">jordan</maintainer>

    <license>zlib</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rdl_dynamics</depend>
    <depend>rdl_cmake</depend>
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>urdf</depend>
    <test_depend>gtest</test_depend>
    <test_depend>lcov</test_depend>

    <export>
    
    </export>
</package>
