<?xml version="1.0"?>
<package format="2">
  <name>rdl_benchmark</name>
  <version>0.9.3</version>
  <description>The rdl_benchmark package</description>

  <maintainer email="jlack1987@gmail.com">jordan</maintainer>

  <license>zlib</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rdl_dynamics</depend>
  <depend>rdl_urdfreader</depend>
  <test_depend>gtest</test_depend>

  <export>

  </export>
</package>
