<?xml version="1.0"?>
<package format="2">
  <name>rdl_cmake</name>
  <version>0.9.1</version>
  <description>The rdl_cmake package</description>

  <maintainer email="jlack1987@gmail.com">jordan</maintainer>
  <license>zlib</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cppcheck</build_depend>
  <build_depend>cppcheck-junit-pip</build_depend>

  <export>

  </export>
</package>